--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <h2 class="outer-title">Чим ми займаємося</h2>
         <ul class="outer-list">
           <li class="outer-item">
-            <img src="./images/img1.jpg" alt="learning to write code" width="370" />
+            <img src="./images/" alt="learning to write code" width="370" />
           </li>
           <li class="outer-item">
             <img
